=== What's New in 2.3 Since 2.2

This section covers the changes made from version 2.2 to version 2.3.

[[kafka-client-2.1]]
==== Kafka Client Version

This version requires the 2.1.0 `kafka-clients` or higher.

