@@ -7,4 +7,8 @@ This section covers the changes made from version 2.2 to version 2.3.
 
 This version requires the 2.1.0 `kafka-clients` or higher.
 
+==== Listener Contaienr Changes
 
+Previously, error handlers received `ListenerExectionFailedException` (with the actual listener exception as the `cause`) when the listener was invoked using a listener adapter (such as `@KafkaListener` s).
+Exceptions thrown by native `GenericMessageListener` s were passed to the error handler unchanged.
+Now a `ListenerExecutionFailedException` is always the argument (with the actual listener exception as the `cause`), which provides access to the container's `group.id` property.
